# kaos_alpha

./: .gitignore  .pre-commit-config.yaml  README.md
.claude/: API.md  BEHAVIOUR.md  BUGS.md  CLAUDE.md  PLAN.md  TODO.md
backend/: .pre-commit-config.yaml  backtest.py  indicator.py  indicators.py  instrument.py  processes.py  pyproject.toml  stochastic_processes.ipynb
backend/app/: main.py  model.py
backend/app/data_model/: camel_case_model.py  indicator_schema.py  model.py
frontend/: README.md  eslint.config.js  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/components/: AddNodeMenu.svelte  ReplayControls.svelte
frontend/src/lib/components/lw-charts-svelte/: Chart.svelte  TimeScale.svelte  context.ts  index.ts
frontend/src/lib/components/lw-charts-svelte/components/: Markers.svelte
frontend/src/lib/components/lw-charts-svelte/series/: index.ts  (+5 more)
frontend/src/lib/components/nodes/: ContextMenu.svelte  EntryNode.svelte  ExitNode.svelte  StrategyFlow.svelte  nodeTypes.ts  nodes.ts  useContextMenu.svelte.ts
frontend/src/lib/models/: backtest-result.svelte.ts  indicator.ts  market-data.svelte.ts
frontend/src/lib/state/: active-indicators.svelte.ts  instrument-context.svelte.ts  instrument.svelte.ts  price-stream.svelte.ts  strategy-flow-context.ts  strategy-flow.svelte.ts
frontend/src/lib/stores/: active-indicators.svelte.ts  price-stream.svelte.ts  strategy-flow.svelte.ts
frontend/src/lib/types/: nodes.ts
frontend/src/lib/utils/: chartConfig.ts  env.ts  mockData.ts  strategyParser.ts
frontend/src/routes/: +page.svelte
(+6 files in other folders)
